// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test CartItem CartItem snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin-bottom: 20px;
  background-color: #fff;
  box-shadow: 0px 2px 1px rgb(0 0 0 / 20%),0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%);
  border-radius: 0px 0px 4px 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px;
}

.c1 h2 {
  font-weight: 500;
  font-size: 40px;
  line-height: 47px;
  margin: 0 0 10px 0;
}

.c1 p {
  font-weight: 500;
  font-size: 28px;
  line-height: 33px;
  margin: 0 0 10px 0;
}

.c2 p {
  margin: 0;
}

.c3 {
  text-align: right;
}

.c3 .trash {
  width: 35px;
  height: 44px;
}

@media screen and (min-width:768px) {
  .c0 img {
    width: 330px;
    max-height: 199px;
  }
}

@media screen and (min-width:1200px) {
  .c0 img {
    max-height: 255px;
    width: 39%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding: 40px 32px;
    width: 61%;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    max-height: 199px;
    padding: 20px;
  }

  .c1 h2 {
    font-size: 28px;
    line-height: 33px;
    margin: 0 0 20px 0;
  }

  .c1 p {
    font-size: 20px;
    line-height: 23px;
    margin: 0 0 20px 0;
  }
}

@media screen and (min-width:1200px) {
  .c1 h2 {
    font-weight: 500;
    font-size: 40px;
    line-height: 47px;
  }

  .c1 p {
    font-weight: 500;
    font-size: 28px;
    line-height: 33px;
  }
}

<body>
    <div>
      <li
        class="c0"
      >
        <img
          src="https://www.eatwell101.com/wp-content/uploads/2018/04/Shrimp-Zucchini-Noodles.jpg"
        />
        <div
          class="c1"
        >
          <h2>
            Noodles with shrimp
          </h2>
          <p>
            Price: 
            25
            $
          </p>
          <div
            class="c2"
          >
            <p>
              Amount: 
              1
            </p>
          </div>
          <div
            class="c3"
            data-testid="delete-btn"
          >
            <svg
              class="trash"
            >
              <use
                xlink:href="sprite.svg#trash"
              />
            </svg>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": .c0 {
  margin-bottom: 20px;
  background-color: #fff;
  box-shadow: 0px 2px 1px rgb(0 0 0 / 20%),0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%);
  border-radius: 0px 0px 4px 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px;
}

.c1 h2 {
  font-weight: 500;
  font-size: 40px;
  line-height: 47px;
  margin: 0 0 10px 0;
}

.c1 p {
  font-weight: 500;
  font-size: 28px;
  line-height: 33px;
  margin: 0 0 10px 0;
}

.c2 p {
  margin: 0;
}

.c3 {
  text-align: right;
}

.c3 .trash {
  width: 35px;
  height: 44px;
}

@media screen and (min-width:768px) {
  .c0 img {
    width: 330px;
    max-height: 199px;
  }
}

@media screen and (min-width:1200px) {
  .c0 img {
    max-height: 255px;
    width: 39%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding: 40px 32px;
    width: 61%;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    max-height: 199px;
    padding: 20px;
  }

  .c1 h2 {
    font-size: 28px;
    line-height: 33px;
    margin: 0 0 20px 0;
  }

  .c1 p {
    font-size: 20px;
    line-height: 23px;
    margin: 0 0 20px 0;
  }
}

@media screen and (min-width:1200px) {
  .c1 h2 {
    font-weight: 500;
    font-size: 40px;
    line-height: 47px;
  }

  .c1 p {
    font-weight: 500;
    font-size: 28px;
    line-height: 33px;
  }
}

<div>
    <li
      class="c0"
    >
      <img
        src="https://www.eatwell101.com/wp-content/uploads/2018/04/Shrimp-Zucchini-Noodles.jpg"
      />
      <div
        class="c1"
      >
        <h2>
          Noodles with shrimp
        </h2>
        <p>
          Price: 
          25
          $
        </p>
        <div
          class="c2"
        >
          <p>
            Amount: 
            1
          </p>
        </div>
        <div
          class="c3"
          data-testid="delete-btn"
        >
          <svg
            class="trash"
          >
            <use
              xlink:href="sprite.svg#trash"
            />
          </svg>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test CartItem CartItem snapshot with empty data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin-bottom: 20px;
  background-color: #fff;
  box-shadow: 0px 2px 1px rgb(0 0 0 / 20%),0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%);
  border-radius: 0px 0px 4px 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px;
}

.c1 h2 {
  font-weight: 500;
  font-size: 40px;
  line-height: 47px;
  margin: 0 0 10px 0;
}

.c1 p {
  font-weight: 500;
  font-size: 28px;
  line-height: 33px;
  margin: 0 0 10px 0;
}

.c2 p {
  margin: 0;
}

.c3 {
  text-align: right;
}

.c3 .trash {
  width: 35px;
  height: 44px;
}

@media screen and (min-width:768px) {
  .c0 img {
    width: 330px;
    max-height: 199px;
  }
}

@media screen and (min-width:1200px) {
  .c0 img {
    max-height: 255px;
    width: 39%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding: 40px 32px;
    width: 61%;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    max-height: 199px;
    padding: 20px;
  }

  .c1 h2 {
    font-size: 28px;
    line-height: 33px;
    margin: 0 0 20px 0;
  }

  .c1 p {
    font-size: 20px;
    line-height: 23px;
    margin: 0 0 20px 0;
  }
}

@media screen and (min-width:1200px) {
  .c1 h2 {
    font-weight: 500;
    font-size: 40px;
    line-height: 47px;
  }

  .c1 p {
    font-weight: 500;
    font-size: 28px;
    line-height: 33px;
  }
}

<body>
    <div>
      <li
        class="c0"
      >
        <img />
        <div
          class="c1"
        >
          <h2 />
          <p>
            Price: 
            $
          </p>
          <div
            class="c2"
          >
            <p>
              Amount: 
            </p>
          </div>
          <div
            class="c3"
            data-testid="delete-btn"
          >
            <svg
              class="trash"
            >
              <use
                xlink:href="sprite.svg#trash"
              />
            </svg>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": .c0 {
  margin-bottom: 20px;
  background-color: #fff;
  box-shadow: 0px 2px 1px rgb(0 0 0 / 20%),0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%);
  border-radius: 0px 0px 4px 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px;
}

.c1 h2 {
  font-weight: 500;
  font-size: 40px;
  line-height: 47px;
  margin: 0 0 10px 0;
}

.c1 p {
  font-weight: 500;
  font-size: 28px;
  line-height: 33px;
  margin: 0 0 10px 0;
}

.c2 p {
  margin: 0;
}

.c3 {
  text-align: right;
}

.c3 .trash {
  width: 35px;
  height: 44px;
}

@media screen and (min-width:768px) {
  .c0 img {
    width: 330px;
    max-height: 199px;
  }
}

@media screen and (min-width:1200px) {
  .c0 img {
    max-height: 255px;
    width: 39%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding: 40px 32px;
    width: 61%;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    max-height: 199px;
    padding: 20px;
  }

  .c1 h2 {
    font-size: 28px;
    line-height: 33px;
    margin: 0 0 20px 0;
  }

  .c1 p {
    font-size: 20px;
    line-height: 23px;
    margin: 0 0 20px 0;
  }
}

@media screen and (min-width:1200px) {
  .c1 h2 {
    font-weight: 500;
    font-size: 40px;
    line-height: 47px;
  }

  .c1 p {
    font-weight: 500;
    font-size: 28px;
    line-height: 33px;
  }
}

<div>
    <li
      class="c0"
    >
      <img />
      <div
        class="c1"
      >
        <h2 />
        <p>
          Price: 
          $
        </p>
        <div
          class="c2"
        >
          <p>
            Amount: 
          </p>
        </div>
        <div
          class="c3"
          data-testid="delete-btn"
        >
          <svg
            class="trash"
          >
            <use
              xlink:href="sprite.svg#trash"
            />
          </svg>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
